criado servico agendado para setar o status das coletas não realizadas ou esquecidas. criado tratamento ao pegar coletas para setar status, id catador, e tempo de inicio.